--- a/MvvmCross.Forms/MvvmCross.Forms.csproj
+++ b/MvvmCross.Forms/MvvmCross.Forms.csproj
@@ -111,4 +111,7 @@
   <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
     <Reference Include="netstandard" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Xamarin.Forms" Version="4.0.1.369313" />
+  </ItemGroup>
 </Project>
