--- a/Projects/Playground/Playground.Forms.UI/Playground.Forms.UI.csproj
+++ b/Projects/Playground/Playground.Forms.UI/Playground.Forms.UI.csproj
@@ -22,4 +22,8 @@
   </ItemGroup>
 
   <Import Project="..\..\..\XamarinForms.targets" />
+
+  <ItemGroup>
+    <PackageReference Update="Xamarin.Forms" Version="4.0.1.383393-nightly" />
+  </ItemGroup>
 </Project>
